--- a/src/components/simpleHero.module.scss
+++ b/src/components/simpleHero.module.scss
@@ -3,6 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 200px);
+  min-height: calc(75vh);
   margin: -20px;
 }
