--- a/src/components/banner.module.scss
+++ b/src/components/banner.module.scss
@@ -1,5 +1,5 @@
 .title {
-  font-size: 76px;
+  font-size: 4.5rem;
   color: var(--backgroundColor1);
 }
 
@@ -7,4 +7,17 @@
   color: #ee6352;
   padding: 5px;
   font-size: 30px;
+}
+
+@media screen and (max-width: 800px) {
+  .title {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 400px) {
+  .title {
+    font-size: 2rem;
+    text-align: center;
+  }
 }
